--- a/laravel_quicktask/package.json
+++ b/laravel_quicktask/package.json
@@ -18,5 +18,8 @@
         "sass": "^1.89.2",
         "tailwindcss": "^3.1.0",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.7"
     }
 }
